--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Instagram",
     "slug": "Instagram",
     "version": "1.0.0",
+    "scheme": "Kgram",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -24,7 +25,11 @@
       "predictiveBackGestureEnabled": false
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
